<resources>
    <string name="app_name">blessing</string>
    <string name="teaching_with_integrity_making_history_through_knowledge">Teaching with Integrity, Making History Through Knowledge</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password">reset password</string>
    <string name="blessing">BLESSING</string>
    <string name="masukan_email">Masukan email</string>
    <string name="masukan_password">Masukan password</string>
    <string name="masukan_username">Masukan username</string>
    <string name="konfirmasi_password">Konfirmasi password</string>
    <string name="register">Register</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="login">login</string>
    <string name="input">input</string>
    <string name="upload">UPLOAD</string>
    <string name="simpan">simpan</string>
    <string name="msg_loading" />
    <string name="don_t_show_this_message_again">Don\'t show this message again.</string>
    <string name="kelas">Kelas:</string>
    <string name="jenjang">Jenjang:</string>
    <string name="preview">Preview</string>
    <string name="choose_image">choose image</string>
    <string name="image_kuis">image kuis</string>
    <string name="upload_kuis">Upload Kuis</string>
    <string name="submit">submit</string>
    <string name="selamat_datang">Selamat Datang, \u0020</string>
    <string name="backarrow">backarrow</string>
    <string name="informasi_lengkap">Informasi Lengkap</string>
    <string name="nama">Nama:</string>
    <string name="email">Email:</string>
    <string name="input_nama_baru">input nama baru</string>
    <string name="register_guru">Register Guru</string>
    <string name="daftar_siswa">Registrasi Siswa</string>
    <string name="daftar_guru">Registrasi Guru</string>
    <string name="icon_made_by_freepik_from_www_flaticon_com">Icon made by Freepik from www.flaticon.com</string>
    <string name="upload_materi">Upload Materi</string>
    <string name="edit_materi">Edit Materi</string>
    <string name="edit_mapel">Edit Mapel</string>
    <string name="materi">Materi</string>
    <string name="bank_soal">Bank Soal</string>
    <string name="tryout">Tryout</string>
    <string name="pembahasan">Pembahasan</string>
    <string name="titikjawaban">. \u0020</string>
    <string name="jawaban">Jawaban</string>
    <string name="belum_ada_pembahasan">Belum ada pembahasan</string>
    <string name="deskripsi">deskripsi</string>
    <string name="mulai">mulai</string>
    <string name="masukan_judul_tryout">Masukan judul tryout</string>
    <string name="masukan_deskripsi">masukan deskripsi</string>
    <string name="input_tryout">Input Tryout</string>
    <string name="edit_tryout">Edit Tryout</string>
    <string name="upload_tryout">upload tryout</string>
    <string name="waktu">Waktu: \u0020</string>
    <string name="dalam_hitungan_menit">dalam hitungan menit</string>
    <string name="hasil">Hasil</string>
    <string name="nilai">Nilai:</string>
    <string name="slash">/</string>
    <string name="menit">\u0020 menit</string>
    <string name="input_judul_materi">Input judul materi</string>
    <string name="or">OR</string>
    <string name="input_email">Input email</string>
    <string name="tambah_mata_pelajaran">Tambah Mata Pelajaran</string>
    <string name="masukan_mata_pelajaran">Masukan Mata Pelajaran</string>
    <string name="confirm">confirm</string>
    <string name="dropdown">Dropdown</string>
</resources>
