<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/accountmenu"
        android:icon="@drawable/ic_account"
<<<<<<< HEAD
        android:title=""
        app:showAsAction="ifRoom|withText">
=======
        app:showAsAction="ifRoom|withText"
        android:title="">
>>>>>>> 73837329fd07894514e9194bf88f89881d1a8dff
        <menu>
            <item
                android:id="@+id/myProfile"
                android:title="@string/profil"
                app:showAsAction="never" />

            <item
                android:id="@+id/registerguru"
                android:title="@string/register_guru"
                app:showAsAction="never"/>

            <item
                android:id="@+id/Logout"
                android:title="@string/logout"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>