<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="12dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/blessinglogo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_blessing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/garamondbold"
            android:text="@string/blessing"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/blessingmotto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/garamond"
            android:text="@string/teaching_with_integrity_making_history_through_knowledge"
            android:textColor="#767474"
            android:textSize="12sp" />

        <View
            android:id="@+id/View1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#808080"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukan_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:theme="@style/TextInputLayoutAppearance"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/masukan_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:theme="@style/TextInputLayoutAppearance"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorLightOrange"
                android:text="@string/login" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/or" />

        <Button
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightOrange"
            android:text="@string/register" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/forgot_pasword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/forgot_password"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                android:layout_toEndOf="@+id/forgot_pasword"
                android:text="@string/reset_password"
                android:textColor="#4682B4"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>