<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="9dp"
    tools:context=".CreateMateriActivity">

    <TextView
        android:id="@+id/textviewmateri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/garamondbold"
        android:text="@string/upload_materi"
        android:textColor="#FF9800"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtmateri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/input_nama_materi" />

    <Button
        android:id="@+id/btnchoosepdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Pilih PDF"
        android:background="@color/colorLightOrange"
        android:layout_gravity="bottom" />

    <Button
        android:id="@+id/btnuploadmateri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:background="@color/colorLightOrange"
        android:text="@string/upload" />

    <Button
        android:id="@+id/btnrename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/simpan"
        android:background="@color/colorLightOrange"
        android:layout_gravity="bottom" />

</LinearLayout>