<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/tologin"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_arrow_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/blessinglogo"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_blessing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/garamondbold"
            android:text="@string/blessing"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/blessingmotto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/garamond"
            android:text="@string/teaching_with_integrity_making_history_through_knowledge"
            android:textColor="#767474"
            android:textSize="12sp" />

        <View
            android:id="@+id/View1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="#808080"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp">

            <EditText
                android:id="@+id/txtusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukan_username"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:paddingVertical="20dp" />

            <EditText
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukan_email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="80dp"
                android:singleLine="true"
                android:importantForAutofill="no"
                android:paddingVertical="20dp"/>

            <EditText
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukan_password"
                android:layout_marginTop="160dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:paddingVertical="20dp" />

            <EditText
                android:id="@+id/txtconfirmpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/konfirmasi_password"
                android:layout_marginTop="240dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:paddingVertical="20dp" />

            <Button
                android:id="@+id/btnregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="4dp"
                android:text="@string/register"
                android:background="#EEA50A"
                android:layout_gravity="bottom" />

        </androidx.cardview.widget.CardView>
<!--        <TextView-->
<!--            android:id="@+id/tv1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginTop="6dp"-->
<!--            android:layout_marginBottom="6dp"-->
<!--            android:fontFamily="@font/garamond"-->
<!--            tools:text="INI NAMA"-->
<!--            android:textColor="#767474"-->
<!--            android:textSize="12sp" />-->

<!--        <TextView-->
<!--            android:id="@+id/tv2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginTop="6dp"-->
<!--            android:layout_marginBottom="6dp"-->
<!--            android:fontFamily="@font/garamond"-->
<!--            tools:text="INI EMAIL"-->
<!--            android:textColor="#767474"-->
<!--            android:textSize="12sp" />-->
    </LinearLayout>
</RelativeLayout>