<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/profilebackground">

        <ImageView
            android:id="@+id/backtomain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/backarrow"
            android:focusable="true"
            android:src="@drawable/ic_back" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_role"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerInParent="true"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            tools:src="@drawable/ic_account"/>

        <TextView
            android:id="@+id/role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            tools:text="Role" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/informasi_lengkap"
            android:textColor="#FF9800"
            android:textSize="20sp"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/email"
                android:textColor="#FF000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_toEndOf="@+id/tvemail"
                android:fontFamily="sans-serif-light"
                android:textColor="#FF000000"
                android:textSize="16sp"
                tools:text="Email" />

            <TextView
                android:id="@+id/tvnama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvemail"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/nama"
                android:textColor="#FF000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_margin="4dp"
                android:layout_toEndOf="@+id/tvnama"
                android:fontFamily="sans-serif-light"
                android:textColor="#FF000000"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="Nama" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Edit Profil"
            android:textColor="#FF9800"
            android:textSize="20sp"
            android:textStyle="normal" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_edit"
            android:focusable="false"
            android:hint="@string/input_nama_baru"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:theme="@style/TextInputLayoutAppearance"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnnewname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_rounded"
            android:text="@string/simpan" />

    </LinearLayout>
</LinearLayout>