<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".CreateKuisActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvuploadkuis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/garamondbold"
            android:text="@string/upload_kuis"
            android:textColor="#FF9800"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/img_filename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:autofillHints="filepath"
                android:focusable="false"
                android:inputType="none"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnchooseimg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@color/colorLightOrange"
                android:baselineAligned="false"
                android:text="@string/choose_image"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvpilihjawaban"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:fontFamily="@font/garamondbold"
                android:gravity="center_vertical"
                android:text="Jawaban:"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerjawaban"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:background="@drawable/spinner"
                android:spinnerMode="dropdown"
                android:textAlignment="center"
                tools:listitem="@android:layout/simple_spinner_item" />

        </LinearLayout>

        <Button
            android:id="@+id/btnsimpankuis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorLightOrange"
            android:text="@string/simpan" />

        <TextView
            android:id="@+id/tvpreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/garamondbold"
            android:text="@string/preview"
            android:textColor="#FF9800"
            android:textSize="18sp"
            android:visibility="gone" />

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/img_preview"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/preview"
            android:scaleType="fitXY"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>